# Cubed

./: .eslintrc.cjs  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/cubed-application/: Cargo.toml
crates/cubed-application/src/: error.rs  events.rs  lib.rs
crates/cubed-application/src/ports/: backup_repository.rs  console.rs  downloader.rs  file_system.rs  java_manager.rs  mod.rs  mod_repository.rs  modpack_repository.rs  network_manager.rs  port_manager.rs  process_manager.rs  resource_monitor.rs  server_repository.rs
crates/cubed-application/src/use_cases/: add_mod.rs  create_backup.rs  create_server.rs  delete_backup.rs  delete_server.rs  download_server_jar.rs  import_modpack.rs  init_file_system.rs  list_backups.rs  list_mods.rs  mod.rs  monitor_server.rs  remove_mod.rs  reserve_port.rs  restart_server.rs  run_server.rs  select_java.rs  server_console.rs  start_server.rs  stop_server.rs
crates/cubed-domain/: Cargo.toml
crates/cubed-domain/src/: error.rs  lib.rs
crates/cubed-domain/src/entities/: backup.rs  mod.rs  mod_entry.rs  modpack.rs  server.rs  settings.rs
crates/cubed-domain/src/value_objects/: java_path.rs  mod.rs  server_name.rs  server_port.rs  server_version.rs
crates/cubed-infrastructure/: Cargo.toml
crates/cubed-infrastructure/migrations/: 0001_create_servers.sql  0002_create_backups.sql  0003_create_settings.sql  0004_create_mods_modpacks.sql
crates/cubed-infrastructure/src/: lib.rs
crates/cubed-infrastructure/src/backup/: file_backup_manager.rs  in_memory_backup_repo.rs  json_backup_repo.rs  mod.rs  postgres_backup_repo.rs
crates/cubed-infrastructure/src/console/: minecraft_console_manager.rs  mod.rs
crates/cubed-infrastructure/src/downloader/: http_downloader.rs  mod.rs  url_builder.rs
crates/cubed-infrastructure/src/fs/: local_file_system.rs  mod.rs
crates/cubed-infrastructure/src/java/: mod.rs  system_java_manager.rs
crates/cubed-infrastructure/src/modpacks/: in_memory_modpack_repo.rs  json_modpack_repo.rs  mod.rs  modpack_installer.rs  postgres_modpack_repo.rs
crates/cubed-infrastructure/src/mods/: file_mod_manager.rs  in_memory_mod_repo.rs  json_mod_repo.rs  mod.rs  postgres_mod_repo.rs
crates/cubed-infrastructure/src/network/: mod.rs  tailscale_manager.rs
crates/cubed-infrastructure/src/persistence/: db.rs  in_memory.rs  json_server_repository.rs  json_settings_store.rs  mod.rs  postgres_server_repository.rs  postgres_settings_store.rs  server_row.rs
crates/cubed-infrastructure/src/port/: mod.rs  tcp_port_manager.rs
crates/cubed-infrastructure/src/process/: minecraft_process_manager.rs  mod.rs
crates/cubed-infrastructure/src/resources/: mod.rs  sysinfo_monitor.rs
crates/cubed-infrastructure/tests/: sync_validation.rs
docs/: REFERENCE.md
src/: App.tsx  api.ts  clipboard.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  event_bus.rs  in_memory_repo.rs  lib.rs  main.rs
src/components/: CreateServerModal.tsx  CubedLogo.tsx  ServerCard.tsx  Sidebar.tsx  StatusBadge.tsx  TailscalePanel.tsx
src/hooks/: useAppEvents.ts
src/lib/: utils.ts
src/pages/: Backups.tsx  Console.tsx  Dashboard.tsx  Modpacks.tsx  Mods.tsx  Servers.tsx  Settings.tsx
