[package]
name = "cubed-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cubed-domain = { workspace = true }
cubed-application = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
