[package]
name = "cubed-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cubed-domain = { workspace = true }
cubed-application = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
futures-util = "0.3"
sysinfo = { workspace = true }
zip = "2"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
